kyy-k8s-config/src/app/frontend/fe-tiku-pc/fe-tiku-pc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fe-tiku-pc
  name: fe-tiku-pc
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: fe-tiku-pc
